@@ -54,6 +54,9 @@ if [istarget sh64*-*-elf] {
     set flags "-mshelf32"
 }
 
+# IA64 has both ordered and unordered sections in an input file.
+setup_xfail ia64-*-*
+
 verbose -log "$ld $flags -o tmpdir/cross1 -T $srcdir/$subdir/cross1.t tmpdir/cross1.o tmpdir/cross2.o"
 
 catch "exec $ld $flags -o tmpdir/cross1 -T $srcdir/$subdir/cross1.t tmpdir/cross1.o tmpdir/cross2.o" exec_output
